--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "spatie/calendar-links": "^1.2",
         "spatie/laravel-blade-javascript": "^2.2",
         "spatie/laravel-cookie-consent": "^2.6",
+        "spatie/laravel-sitemap": "^5.2",
         "symfony/process": "^4.3"
     },
     "require-dev": {
