--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "anhskohbo/no-captcha": "^3.2",
         "fideloper/proxy": "^4.0",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "5.8.*",
